# lx-cli

./: Cargo.toml  README.md  config.example  install.sh
src/: cli.rs  config.rs  file_entry.rs  formatter.rs  icon.rs  lib.rs  main.rs  reader.rs  sort.rs
src/formatter/: long.rs  mod.rs  one_per_line.rs  recursive.rs  short.rs
