[package]
name = "lx"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.4", features = ["derive"] }
colored = "2"
dirs = "6.0.0"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
terminal_size = "0.3"
toml = "0.9.8"
unicode-width = "0.2.2"
