[package]
name = "lx-cli"
version = "0.1.5"
edition = "2024"
authors = ["Jack Derksen <hello@viis.dev>"]
description = "A nicer way to list your files ✨"
license = "MIT"
repository = "https://github.com/JackDerksen/lx-cli"
homepage = "https://github.com/JackDerksen/lx-cli"
documentation = "https://docs.rs/lx-cli"
readme = "README.md"
keywords = ["cli", "ls", "file-listing", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.4", features = ["derive"] }
colored = "2"
dirs = "6.0.0"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
terminal_size = "0.3"
toml = "0.9.8"
unicode-width = "0.2.2"
